Fix left column float layout bug

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -236,7 +236,6 @@ and (max-width: 1000px) {
 
 .application-handling__review-area {
   display: flex;
-  justify-content: flex-end;
 }
 
 .application-handling__review {
@@ -413,6 +412,7 @@ and (max-width: 1000px) {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  padding-right: 15px;
 }
 
 .application__form-field-label {
